--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <!-- Add your name here if you contributed to the translation-->
+    <string name="translators">(developers)</string>
     <string name="app_name" translatable="false">TakoStats</string>
     <string name="start">Start</string>
     <string name="stop">Stop</string>
