--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="dialog_delete_record_message">Are you sure to delete this record? The operation cannot be undone.</string>
     <string name="no_records">No records</string>
     <string name="customize_overlay">Customize overlay</string>
+    <string name="customize_overlay_general">General</string>
     <string name="customize_overlay_data">Data</string>
     <string name="customize_overlay_style">Style</string>
     <string name="customize_overlay_fps" translatable="false">FPS</string>
@@ -64,6 +65,9 @@
     <string name="customize_overlay_background_color">Background color</string>
     <string name="customize_overlay_download_speed">Download speed</string>
     <string name="customize_overlay_upload_speed">Upload speed</string>
+    <string name="customize_overlay_hide_from_screen_captures">Don\'t show on screenshots</string>
+    <string name="customize_overlay_hide_from_screen_captures_summary">Hide overlay from screenshots and screen recordings</string>
+    <string name="this_feature_is_not_supported_by_your_device">This feature is not supported by your device</string>
     <string name="duration_format">%1$dm %2$ds</string>
     <string name="dialog_purchase_not_verified_message">To avoid fraud, the purchase requires regular verification. Please do not block the app from accessing the network.\n\nThe app will stop working after a period of time without successful verification.</string>
     <string name="dialog_purchase_not_verified_button_retry">Retry</string>
@@ -98,4 +102,5 @@
     <string name="dialog_delete_selected_records_message">Are you sure to delete selected records? The operation cannot be undone.</string>
     <string name="select_all">Select all</string>
     <string name="select_inverse">Select inverse</string>
+
 </resources>
