--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -95,5 +95,12 @@
     <string name="customize_overlay_hide_from_screen_captures_summary">从屏幕截图和屏幕录像中隐藏叠加层</string>
     <string name="this_feature_is_not_supported_by_your_device">您的设备不支持本功能</string>
     <string name="customize_overlay_general">通用</string>
-
+    <string name="customize_overlay_current">电流</string>
+    <string name="customize_overlay_current_summary">电池放电电流\n充电时不可用</string>
+    <string name="customize_overlay_voltage">电压</string>
+    <string name="customize_overlay_voltage_summary">电池电压</string>
+    <string name="customize_overlay_power">功耗</string>
+    <string name="customize_overlay_power_summary">由电池电流和电压计算得出</string>
+    <string name="customize_overlay_frame_power">每帧功耗</string>
+    <string name="customize_overlay_frame_power_summary">由功耗和 FPS 计算得出</string>
 </resources>
