--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,14 @@
     <string name="customize_overlay_background_color">Background color</string>
     <string name="customize_overlay_download_speed">Download speed</string>
     <string name="customize_overlay_upload_speed">Upload speed</string>
+    <string name="customize_overlay_current">Current</string>
+    <string name="customize_overlay_current_summary">Battery discharge current\nUnavailable while charging</string>
+    <string name="customize_overlay_voltage">Voltage</string>
+    <string name="customize_overlay_voltage_summary">Battery voltage\nUnavailable while charging</string>
+    <string name="customize_overlay_power">Power consumption</string>
+    <string name="customize_overlay_power_summary">Calculated from battery current and voltage</string>
+    <string name="customize_overlay_frame_power">Power consumption per frame</string>
+    <string name="customize_overlay_frame_power_summary">Calculated from power consumption and FPS</string>
     <string name="customize_overlay_hide_from_screen_captures">Don\'t show on screenshots</string>
     <string name="customize_overlay_hide_from_screen_captures_summary">Hide overlay from screenshots and screen recordings</string>
     <string name="this_feature_is_not_supported_by_your_device">This feature is not supported by your device</string>
