--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -25,11 +25,8 @@
     <string name="avg_frame_time">平均フレーム時間</string>
     <string name="max_frame_time">最大フレーム時間</string>
     <string name="frame_time">フレーム時間</string>
-    <string name="chart_performance_marker">%1$.1f FPS\nat %2$s</string>
-    <string name="chart_cpu_marker">%1$.1f%%\nat %2$s</string>
-    <string name="chart_cpu_frequency_marker">%1$d MHz\nat %2$s</string>
     <string name="chart_frame_time_marker">%1$.2f ms\nat frame %2$d</string>
-    <string name="chart_temperature_marker_celsius">%1$.1f ℃\nat %2$s</string>
+    <string name="chart_marker">%1$s\nat %2$s</string>
     <string name="percentile_99_fps">99th %ile 最小 FPS</string>
     <string name="percentile_95_fps">95th %ile 最小 FPS</string>
     <string name="delete">削除</string>
@@ -88,7 +85,6 @@
     <string name="ignore_compat_mode_overlay_title">互換モードのプロンプトを表示しないようにしますか?</string>
     <string name="ignore_compat_mode_overlay_message">3ドットメニューから互換モードを有効化できます。</string>
     <plurals name="items_selected">
-        <item quantity="one">%d 個を選択中</item>
         <item quantity="other">%d 個を選択中</item>
     </plurals>
     <string name="dialog_delete_selected_records_title">選択した記録を削除しますか?</string>
@@ -110,3 +106,4 @@
 \n充電中は計測できません</string>
     <string name="customize_overlay_current">電流</string>
 </resources>
+
