--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -63,7 +63,6 @@
     <string name="purchase">购买</string>
     <string name="about">关于</string>
     <string name="record_not_purchased">未购买的情况下，您只可以查看前 5 分钟及前 20000 帧的数据。</string>
-    <string name="overlay_trail_ends">试用结束</string>
     <string name="compat_mode">兼容模式</string>
     <string name="enable_compat_mode">启用兼容模式</string>
     <string name="overlay_compat_mode_description">在某些设备上，无法显示叠加层。请尝试改用兼容模式。</string>
@@ -109,4 +108,5 @@
     <string name="avg_power_frame_consumption">平均每帧功耗</string>
     <string name="using_preview_os_description">您正在使用开发者预览版或测试版 Android 系统。若应用无法正常工作，请尝试更新到最新版本。</string>
     <string name="using_unsupported_os_description">您正使用的 Android 版本尚未支持。若应用无法正常工作，请尝试更新到最新版本。</string>
+    <string name="overlay_trial_ended">试用已结束。\n请考虑购买或重启服务以重新开始试用。</string>
 </resources>
