--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -109,4 +109,8 @@
     <string name="using_preview_os_description">您正在使用开发者预览版或测试版 Android 系统。若应用无法正常工作，请尝试更新到最新版本。</string>
     <string name="using_unsupported_os_description">您正使用的 Android 版本尚未支持。若应用无法正常工作，请尝试更新到最新版本。</string>
     <string name="overlay_trial_ended">试用已结束。\n请考虑购买或重启服务以重新开始试用。</string>
+    <string name="settings">设置</string>
+    <string name="settings_temperature_unit">温度单位</string>
+    <string name="temperature_unit_celsius">摄氏度（℃）</string>
+    <string name="temperature_unit_fahrenheit">华氏度（℉）</string>
 </resources>
