--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,5 +134,16 @@
     <string name="export_device_storage_description">%s folder</string>
     <string name="export_other_locations">Other locations</string>
     <string name="export_other_locations_description">Choose a folder from this device or any app that supports SAF (Storage Access Framework) such as Google Drive, OneDrive, etc.</string>
-
+    <plurals name="exporting_x_records">
+        <item quantity="one">Exporting %d record</item>
+        <item quantity="other">Exporting %d records</item>
+    </plurals>
+    <plurals name="export_progress">
+        <item quantity="one">Exporting %1$d of %2$d record</item>
+        <item quantity="other">Exporting %1$d of %2$d records</item>
+    </plurals>
+    <string name="export_progress">%1$d/%2$d</string>
+    <string name="export_progress_please_wait">Please wait</string>
+    <string name="export_error_title">Something went wrong</string>
+    <string name="export_has_been_saved_to">The file has been saved to %s.</string>
 </resources>
