--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -117,7 +117,7 @@
     <string name="compatibility_mode_overlay_button_my_device_has_no_problem">我的设备上没有问题</string>
     <string name="export">导出</string>
     <string name="export_not_purchased">未购买的情况下，您只可以导出前 5 分钟及前 20000 帧的数据。</string>
-    <string name="export_description">将记录导出为 CSV 格式（逗号分隔值），以便您可以在电子表格软件（例如 Excel）中对数据进行进一步处理。</string>
+    <string name="export_description">将记录导出为 CSV 格式（逗号分隔值），以便您在电子表格软件（例如 Excel）中对数据进行进一步处理。</string>
     <string name="export_description_zip">每条记录的帧生成时间和其他所有数据将分别被导出到两个 CSV 文件中。最后，所有的 CSV 文件会被打包为一个 ZIP 文件。</string>
     <plurals name="export_records_to">
         <item quantity="other">导出 %d 条记录到</item>
@@ -132,7 +132,7 @@
     <plurals name="export_progress">
         <item quantity="other">正在导出 %2$d 条记录中的第 %1$d 条</item>
     </plurals>
-    <string name="export_progress">%1$d/%2$d</string>
+    <string name="export_sub_progress">%1$d/%2$d</string>
     <string name="export_progress_please_wait">请等待</string>
     <string name="export_error_title">出现了错误</string>
     <string name="export_has_been_saved_to">文件已经被保存到 %s。</string>
