--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,8 +72,12 @@
     <string name="customize_overlay_frame_power_summary">Calculated from power consumption and FPS</string>
     <string name="customize_overlay_hide_from_screen_captures">Don\'t show on screenshots</string>
     <string name="customize_overlay_hide_from_screen_captures_summary">Hide overlay from screenshots and screen recordings</string>
+    <string name="customize_overlay_hide_from_lock_screen">Don\'t show on lockscreen</string>
+    <string name="customize_overlay_hide_from_lock_screen_summary">Hide overlay from the lockscreen</string>
+    <string name="customize_overlay_hide_from_lock_screen_summary_compatibility_mode">Compatibility mode overlay always not show on lockscreen</string>
     <string name="this_feature_is_not_supported_by_your_device">This feature is not supported by your device</string>
     <string name="this_feature_is_not_supported_under_compat_mode">This feature is not supported under compatibility mode</string>
+    <string name="this_feature_requires_android_version">This feature requires Android %1$s, your devices runs Android %2$s</string>
     <string name="duration_format">%1$dm %2$ds</string>
     <string name="dialog_purchase_not_verified_message">To avoid fraud, the purchase requires regular verification. Please do not block the app from accessing the network.\n\nThe app will stop working after a period of time without successful verification.</string>
     <string name="dialog_purchase_not_verified_button_retry">Retry</string>
